tests/baselines/reference/jsDeclarationsTypeReferences2.errors.txt
tests/cases/conformance/jsdoc/declarations/index.js(1,8): error TS2305: Module '"./something"' has no exported member 'a'.
tests/cases/conformance/jsdoc/declarations/index.js(1,11): error TS2305: Module '"./something"' has no exported member 'm'.


==== tests/cases/conformance/jsdoc/declarations/index.js (2 errors) ====
    const{ a, m } = require("./something").o;
           ~
!!! error TS2305: Module '"./something"' has no exported member 'a'.
              ~
!!! error TS2305: Module '"./something"' has no exported member 'm'.
    
    const thing = a + m
    
    module.exports = {
        thing
    };
    
==== tests/cases/conformance/jsdoc/declarations/something.ts (0 errors) ====
    export const o = {
        a: 1,
        m: 1
    }
    